--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -9,25 +9,6 @@ on:
       - v*
   pull_request:
 
-defaults:
-  run:
-    shell: bash
-
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      - name: Install Go
-        uses: actions/setup-go@v3
-        with:
-          go-version: 1.x
-      - name: Run tests
-        run: |
-          set -x
-          which go
-          go version
-          export GOMAXPROCS=2
-          args=("-p" "2" "-race")
-          go test "${args[@]}" -timeout 800s ./...
+  checks:
+    uses: grafana/k6-ci/.github/workflows/all.yml@main
